--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <dd>华普亿方官方网站</dd>
                 <dd>信邦典当</dd>
                 <dd>中信资产官方网站</dd>
-
+                <dd>赢之道门户网站</dd>
             </dl>
         </li>
         <li>
@@ -80,8 +80,43 @@
 
 
     </ul>
-    <img src="img/arr.png" id="arrow">
+    <img src="images/arr.png" id="arrow">
+    <div class="music" id="music">
+        <audio id="audioFir" src="audioFile/beyond.mp3" preload="none" loop/>
+    </div>
 </div>
 
 </body>
+<script>
+    ~function () {
+
+        var music = document.getElementById("music"), audioFir = document.getElementById("audioFir");
+        console.log(audioFir)
+        //->给页面的加载缓冲500MS时间
+        window.setTimeout(function () {
+            audioFir.play();
+
+            //->当音频文件可以播放(出声了)的时候:canplay/canplaythrough
+
+            audioFir.addEventListener("canplay", function () {
+
+                music.style.display = "block";
+                music.className = "music musicMove";
+            }, false);
+        }, 500);
+
+        //->移动端使用CLICK存在300MS的延迟
+        music.addEventListener("click", function () {
+            //->当前是暂停的
+            if (audioFir.paused) {
+                audioFir.play();
+                music.className = "music musicMove";
+                return;
+            }
+            //->当前是播放的
+            audioFir.pause();
+            music.className = "music";
+        }, false);
+    }();
+</script>
 </html>
